k8s/bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
        - name: bar-app
          image: hashicorp/http-echo
          ports:
            - name: http-port
              containerPort: 6000
          args:
            - "-text=\"Hello! I'm bar application.\""
            - "-listen=:6000"
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 6000
      targetPort: 6000
      protocol: TCP
  selector:
    app: bar-app
